@@ -16,6 +16,7 @@ export { ScrollView } from "./ui/components/scroll_view.slint";
 export { StateLayerArea, StateLayer, Ripple } from "./ui/components/state_layer.slint";
 export { TextField } from "./ui/components/text_field.slint";
 export { ToolTip } from "./ui/components/tooltip.slint";
+export { LinearProgressIndicator, CircularProgressIndicator } from "./ui/components/progress_indicator.slint";
 
 // items
 export { MenuItem } from "./ui/items/menu_item.slint";
