@@ -5,12 +5,14 @@ All notable changes to this project will be documented in this file.
 
 ### Added
 - Added "START" and "END" keywords to Min/Max Frame selection for easier trajectory range handling.
+- Reintegrated `LinearProgressIndicator` and `CircularProgressIndicator` to Material 1.0 library.
+- Added native Save File Dialog for "Write Files" output selection.
 
 ### Fixed
 - Corrected PAD (Plane Angle Distribution) calculations to match v1.0.4 results.
 
 ### Changed
-- Updated progress bar to reflect Structure Analyzer progress (splitting 70/30 with Distribution Functions).
+- Updated progress bar logic and UI to use `LinearProgressIndicator` for consistent Material Design aesthetics.
 
 ## [1.9.7] 2026-01-29
 
